---
source: tests/crawler.rs
expression: section
---
[
  Section(
    name: "Terms",
    questions: [
      Question(
        id: "[id]",
        data: Term(Term(
          term: "Quizcrawler",
          definition: "Quizcrawler is an application that, when fed a file of class-notes, crawls the structure and generates interactive quizzes that can be used as review. It leverages spaced repetition and forced / active recall to enhance learning. The gamification of studying should further increase engagement and recall.",
          inverted: false,
        )),
        comp_level: Trimmed,
        mastery: 0,
        correct: 0,
        seen: 0,
        hints: 0,
        last_correct: "[last_correct]",
      ),
    ],
    children: [],
  ),
]
